--- a/src/comercial/frm_principal.form
+++ b/src/comercial/frm_principal.form
@@ -856,7 +856,7 @@
                     <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
                       <Image iconType="3" name="/icons/shop-78-512.png"/>
                     </Property>
-                    <Property name="text" type="java.lang.String" value="Guias de Remision"/>
+                    <Property name="text" type="java.lang.String" value="Salidas"/>
                     <Property name="focusable" type="boolean" value="false"/>
                     <Property name="horizontalTextPosition" type="int" value="0"/>
                     <Property name="verticalTextPosition" type="int" value="3"/>
