--- a/src/forms/frm_reg_producto.form
+++ b/src/forms/frm_reg_producto.form
@@ -414,6 +414,9 @@
                   <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="t_presentacionesMouseClicked"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
