--- a/src/comercial/frm_principal.form
+++ b/src/comercial/frm_principal.form
@@ -798,11 +798,13 @@
                       <Image iconType="3" name="/icons/archiver-512.png"/>
                     </Property>
                     <Property name="text" type="java.lang.String" value="Clasificacion"/>
-                    <Property name="enabled" type="boolean" value="false"/>
                     <Property name="focusable" type="boolean" value="false"/>
                     <Property name="horizontalTextPosition" type="int" value="0"/>
                     <Property name="verticalTextPosition" type="int" value="3"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton15ActionPerformed"/>
+                  </Events>
                 </Component>
                 <Component class="javax.swing.JButton" name="jButton13">
                   <Properties>
